# bouclier-numerique

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HALL_OF_FAME.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
files (3)/: README.md
jour-01-password-vault/: password_vault.py
jour-04-file-vault/: file_vault.py
jour-07-honeypot/: honeypot.py
jour-08-immutable-backup/: immutable_backup.py
jour-10-port-scanner/: port_scanner.py
jour-12-treatment-registry/: registre_rgpd.html  registre_traitements.py
jour-13-data-masking/: data_masking.py
jour-14-cookie-consent/: cookie_consent.py  cookie_consent_demo.html
jour-15-dependency-audit/: dependency_audit.py
jour-16-phishing-sim/: phishing_education.html
jour-17-ids-hids/: ids_monitor.py
jour-18-e2ee/: e2ee_messaging.py
jour-19-pca/: pca_generator.py  pca_techcorp.docx
jour-20-rssi-dashboard/: rssi_dashboard.html
jour-23-hash-cracker/: hash_cracker.py
jour-24-osint-crawler/: osint_crawler.py
jour-28-soar/: soar.py
jour-29-threat-intel/: threat_intel.py
jour-30-suite-integree/: bouclier_suite.py
jour-bonus-dpa-generator/: DPA_TechCorp_CloudHost.docx  dpa_generator.py
readmes/: README.md  jour-01-password-vault.md  jour-02-exif-cleaner.md  jour-03-leak-detector.md  jour-04-file-vault.md  jour-05-permission-audit.md  jour-06-rate-limiter.md  jour-07-honeypot.md  jour-08-immutable-backup.md  jour-09-log-anonymizer.md  jour-10-port-scanner.md  jour-11-right-to-erasure.md  jour-12-registre-traitements.md  jour-13-data-masking.md  jour-16-phishing-sim.md  (+17 more)
(+20 files in other folders)
