[project]
name = "bouclier-numerique"
version = "1.0.0"
description = "30 outils de cybersécurité — du coffre-fort mots de passe au SOAR"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".venv", "venv", "__pycache__", ".git",
    "*.egg-info", "build", "dist",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (sécurité)
    "UP",   # pyupgrade
]
ignore = [
    "S101",  # assert — utilisé dans les tests
    "S603",  # subprocess — intentionnel dans les outils d'audit
    "S607",  # partial executable path — intentionnel
    "E501",  # line too long — géré par le formatter
    "B008",  # do not perform function calls in default args — Flask
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "B"]  # Moins strict dans les tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # Dépendances optionnelles

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "venv/*", ".venv/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def run_demo",
]
